--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Bailes, F., Dean, R. T., & Broughton, M. C. (2015). How different are our perceptions of equal-tempered and microtonal intervals? A behavioural and EEG survey. PloS One, 10(8), e0135082–e0135082. https://doi.org/10.1371/journal.pone.0135082
             </p><br><br>
         <h4>Letter to A Math Teacher</h4>
-        <p>Dear Mr. Korsavasich,
+        <p>Dear Mr. Korsavasich,<br>
             Today my daughter brought home math homework about pi. Usually I am quick to guide her through any difficulties she encounters on her homework, but for pi to be taught, I just don’t understand! Why on earth aren't we teaching tau instead?
             <br><br>
             When I was in college, I discovered tau (which is just 2π) and it completely changed how I thought about circles. Tau represents the circumference of the unit circle, making it so much better than pi, where we're having to multiply by 2 every time to get the full circumference.
