--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 
-        <h2>Hi, I'm Tommy Oberlin from FSU</h2>
+        <h2>Hi, I'm Tommy</h2>
         <b>...and <em>this</em> is my ENC 2135 Digital Portfolio!</b>
         <br>
         <img src="flower.jpg" alt="AI Flowers, credit: google gemeni">
@@ -13,15 +13,17 @@
         <h3>Revised Project 1</h2>
         <h4>The Problem of Tuning and our Compromised Solution</h4>
         <p>
+            <mark>I might try writing a better hook that suggests why a reader would actually care about it at all. </mark>
+            
             Music, being composed of sounds with pitch has no naturally obvious tuning. With all the colors of all audible frequencies and no palette to choose from, a composer would be at a loss, completely unable to write music. And even more so would the musician struggle to decode and perform their creation. How should we go about choosing the palette from which we make music? Choosing a tuning system is almost always a fairly arbitrary compromise between objective acoustic properties and practical considerations. The modern solution is merely the solution that is considered the least compromised, and there is a strong argument that in limiting our musical palette to it, we are missing out on a whole different world of sound.
             <br><br>
             What should be included in a tuning system? Well if you pick two pitches at random they have a very high likelihood of just sounding very dissonant together. And while dissonance is useful, and makes music interesting, without a context of consonance it tends just to sound bad.
             <br><br>
-            Every sound is a vibration at a frequency, measured in Hz, determining its pitch (cycles/second). Most sounds we find pleasing such as a string vibrating, or a column of air, resonate and produce quieter pitches, or harmonics, at positive integer multiples of the fundamental frequency. For instance, a plucked string sounding at A 440 Hz, will also produce pitches at 880 Hz (2*440), 1320 Hz (3*440), and so on.
+                Every sound is a vibration at a frequency, measured in Hz, determining its pitch (cycles/second) <mark> <-- This isn't clear. Describing sound as a vibration doesn't make it obvious that is a periodic repetative vibration, or that what that vibration is, is actually a fluctuation of air pressure. Maybe I could assume a minimum amount of knowledge, and only include what is directly relevant though. </mark>. Most sounds we find pleasing such as a string vibrating, or a column of air, resonate and produce quieter pitches, or harmonics, at positive integer multiples of the fundamental frequency. For instance, a plucked string sounding at A 440 Hz, will also produce pitches at 880 Hz (2*440), 1320 Hz (3*440), and so on.
             <br><br>
             We can think about the consonance and dissonance of two notes in terms of how well their harmonics are in tune. This is true when one note is one of the early harmonics of the other. For the most consonant interval – the octave, the harmonics of the higher pitch are exactly featured in the pitch of the lower, and of course, the octave is the first harmonic of the other pitch.
             <br><br>
-            Consequently, if we want to create a number of consonant pitches one way to do it is to multiply and divide their frequencies by low integer numbers, effectively producing harmonics or octave displacements of each other. Restricting the multipliers to be 5 and below you get a set of tuning systems called 5-limit tuning. With 5-limit tuning, you can easily derive several tunings with pure-sounding consonant intervals. An interval is just or pure when the ratio between its frequencies is expressed as a ratio of small numbers. Unfortunately, these tunings work great only in one key. To justly tune every key requires so many notes, many sounding very near each other, that it would be impractical on a real instrument.
+            Consequently, if we want to create a number of consonant pitches one way to do it is to multiply and divide their frequencies by low integer numbers, effectively producing harmonics or octave displacements of each other. Restricting the multipliers to be 5 and below you get a set of tuning systems called 5-limit tuning. With 5-limit tuning, you can easily derive several tunings with pure-sounding consonant intervals. <mark> Could clarify this section on 5-limit tuning.</mark>An interval is just or pure when the ratio between its frequencies is expressed as a ratio of small numbers. Unfortunately, these tunings work great only in one key. To justly tune every key requires so many notes, many sounding very near each other, that it would be impractical on a real instrument.
             <br><br>
             Pythagorean tuning, though likely misattributed to him (Duffin 2007)is recognized as one of the earliest systems in use. As the story goes Pythagoras developed his concept of tuning on the monochord – a simple instrument with one string and a resonating box (Wang 2011). For stringed instruments, dividing the length of the string by some number corresponds to a change in frequency equal to the frequency times that number. Pythagorean tuning observes that low number ratios of string length correspond to more consonant harmonies. Halving the string produces the octave, a ratio of 1:2. Two frequencies an octave apart sound so similar as to be identifiable as very nearly the same note, only higher or lower. Shortening the string by 2/3 produced a tone that was very harmonious when played with its original length. This interval very nearly corresponds with the modern interval of a 5th. By repeatedly shortening the string to 2/3 its length and doubling it to bring it down the octave as needed, Pythagoras was able to construct a scale strikingly similar to the one in use today. Each reduction of the string to 2/3 its length produced a new sounding tone up until the 12th iteration where the new tone sounds very near the starting tone. Unfortunately, this pitch isn’t an exact octave multiple of the starting pitch, and when played together with the base pitch, sounds painfully out of tune. This difference between the base pitch and its unfortunate counterpart is called the Pythagorean Comma. This poses a problem, as the final fifth required to close the loop sounds horribly out of tune, and any keys involving it would sound off.
             <br><br>
@@ -43,6 +45,8 @@
             <br><br>
             For all its flaws 12 TET is an understandable compromise for the modern age. Despite every note being marginally out of tune with the harmonic series it is a very versatile and practical system. Each key maintaining the same relative tuning has allowed composers in the 20th century and jazz musicians to write music that frequently and smoothly modulates between keys. And equivalent keys make transposing an accompaniment to match the preferred vocal range of a singer a possibility without greatly changing the sound of the music or returning your instrument. But for the average musical student 12 TET is about all they will ever know, and understanding that it is a compromise and not the only option is I think worth more musicians’ consideration.
             <br><br>
+
+            <mark>Throughout the paper, I think I could bring my sources into the text more, rather than trying to present new complicated metaphors for explaining the physics of sound.</mark>
             
             <b>Works Cited</b> <br><br>
             Wang, E. J. (2011). Mistuning the World: A cultural History of Tuning and Temperament in the Seventeenth Century. ProQuest Dissertations & Theses. 
@@ -58,7 +62,7 @@
             Bailes, F., Dean, R. T., & Broughton, M. C. (2015). How different are our perceptions of equal-tempered and microtonal intervals? A behavioural and EEG survey. PloS One, 10(8), e0135082–e0135082. https://doi.org/10.1371/journal.pone.0135082
             </p><br><br>
         <h4>Letter to A Math Teacher</h4>
-        <p>Dear Mr. Korsavasich,<br>
+        <p>Dear Mr. Korsavasich,
             Today my daughter brought home math homework about pi. Usually I am quick to guide her through any difficulties she encounters on her homework, but for pi to be taught, I just don’t understand! Why on earth aren't we teaching tau instead?
             <br><br>
             When I was in college, I discovered tau (which is just 2π) and it completely changed how I thought about circles. Tau represents the circumference of the unit circle, making it so much better than pi, where we're having to multiply by 2 every time to get the full circumference.
